--- a/login.html
+++ b/login.html
@@ -33,11 +33,8 @@
     <h1 class="text-2xl font-semibold mr-3">Lizfar DZ</h1>
   </div>
 
-  <!-- Loading message -->
-  <div id="loading" class="text-yellow-400 mb-4">جارٍ التحقق من الحالة...</div>
-
   <!-- Login Box -->
-  <div id="loginBox" class="hidden w-full max-w-md bg-white/10 backdrop-blur-sm rounded-2xl p-8 shadow-xl">
+  <div id="loginBox" class="w-full max-w-md bg-white/10 backdrop-blur-sm rounded-2xl p-8 shadow-xl">
     <h2 class="text-xl font-semibold mb-6 text-center">تسجيل الدخول إلى حسابك</h2>
 
     <form id="loginForm" class="space-y-4">
@@ -77,26 +74,21 @@
   <!-- Firebase -->
   <script type="module">
     import { auth } from "./firebase-config.js";
-    import { signInWithEmailAndPassword, onAuthStateChanged }
+    import { signInWithEmailAndPassword, onAuthStateChanged } 
       from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
 
     const loginBox = document.getElementById("loginBox");
-    const loading = document.getElementById("loading");
     const form = document.getElementById("loginForm");
 
-    // ✅ تحقق من حالة المستخدم
+    // متابعة حالة تسجيل الدخول
     onAuthStateChanged(auth, (user) => {
-      loading.style.display = "none"; // إزالة رسالة التحميل
       if (user) {
-        // المستخدم مسجل دخول مسبقًا
+        // إعادة التوجيه مباشرة عند تسجيل الدخول
         window.location.href = "index.html";
-      } else {
-        // عرض صفحة تسجيل الدخول
-        loginBox.classList.remove("hidden");
       }
     });
 
-    // ✅ تسجيل الدخول
+    // تسجيل الدخول
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
@@ -109,14 +101,8 @@
       }
 
       try {
-        const { user } = await signInWithEmailAndPassword(auth, email, password);
-        if (!user.emailVerified) {
-          alert("⚠️ يرجى تفعيل بريدك الإلكتروني قبل تسجيل الدخول.");
-          return;
-        }
-
-        alert("✅ تم تسجيل الدخول بنجاح!");
-        window.location.href = "index.html";
+        await signInWithEmailAndPassword(auth, email, password);
+        // سيتم إعادة التوجيه تلقائيًا من onAuthStateChanged
       } catch (error) {
         if (error.code === "auth/user-not-found") {
           alert("❌ المستخدم غير موجود.");
